Create Company Controller

--- a/views/create_company.ejs
+++ b/views/create_company.ejs
@@ -9,13 +9,13 @@
   <body>
     <h1><%= title %></h1>
     <form method="POST">
-      <input type="text" name="companyCode" placeholder="Company Code" />
-      <input type="text" name="companyID" placeholder="company ID" />
+      <input type="text" name="CompanyID" placeholder="Company ID" />
       <input
         type="text"
-        name="companyPassword"
-        placeholder="Company Password"
+        name="CompanyPassword"
+        placeholder="company Password"
       />
+      <input type="text" name="CompanyName" placeholder="Company Name" />
       <input type="submit" />
     </form>
   </body>
