Error handling on page changed

--- a/views/company_employee_create.ejs
+++ b/views/company_employee_create.ejs
@@ -30,7 +30,7 @@
     <% if(errors) { %>
     <ul>
       <% for(let i = 0; i < errors.length; i++) { %>
-      <li><%= errors[i].msg %></li>
+      <li><%= errors[i] %></li>
       <% } %>
     </ul>
     <% } %>
