--- a/views/company_employee_update.ejs
+++ b/views/company_employee_update.ejs
@@ -25,7 +25,7 @@
     <% if(errors) { %>
     <ul>
       <% for(let i = 0; i < errors.length; i++) { %>
-      <li><%= errors[i] %></li>
+      <li><%= errors[i].msg %></li>
       <% } %>
     </ul>
     <% } %>
